--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div class="about">
         <a href="tribute.html"><img src="img2.jpg" height="500px" width="600px"></a>
         <div class="right">
-            <h1>ABOUT</h1>
+            <h1>ABOUT:</h1>
             
         </div>
         <div class="aboutp">
@@ -74,7 +74,7 @@
     </div>
     </center>
     <div class="last">
-        <h1>For more information visit - ></h1>
+        <h1>For more details visit - ></h1>
     </div>
     <div class="last1">
         <strong><a href="https://en.wikipedia.org/wiki/Rohit_Sharma" target="_blank">Visit wikipedia.com</a></strong>
