--- a/index.html
+++ b/index.html
@@ -31,14 +31,14 @@
         </div>
         <div class="aboutp">
             <p>
-                Rohit Gurunath Sharma (born 30 April 1987) is an Indian international cricketer and the current captain of the Indian cricket team. Widely considered as one of the best opening batter of all time,[2] he plays as a right-handed batsman for Mumbai Indians in IPL and for Mumbai in domestic cricket. Rohit Sharma also captains Mumbai Indians in IPL and the team has won 5 tittles under his leadership, most by any team.
+                Rohit Sharma (born 30 April 1987) is an Indian international cricketer and the current captain of the Indian cricket team. Widely considered as one of the best opening batter of all time,[2] he plays as a right-handed batsman for Mumbai Indians in IPL and for Mumbai in domestic cricket. Rohit Sharma also captains Mumbai Indians in IPL and the team has won 5 tittles under his leadership, most by any team.
             </p>
 
         </div>
     </div>
     <hr>
     <div class="gallery">
-            <h1>GALLERY</h1>
+            <h1>PHOTOS</h1>
     </div>
     <div class="row">
         <div class="column">
