--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             
         </nav>
         <div class="top-left">
-            <h1>Rohit Sharma</h1>
+            <h1>RoHIT Sharma</h1>
             <h4>THE HITMAN</h4>
             
         </div>
